--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,13 @@
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
-  <div id="main-content" class="container">
+
+    <router-outlet></router-outlet>
+    <div id="main-content" class="container">
   
       <div class="row">
           <div class="col-md-12">
-             {{ greeting }}
+             <!-- {{ greeting }} -->
           </div>
       </div>
       
@@ -31,8 +33,7 @@
             </form>
         </div>
   
-        <p> {{ greeting }}</p>
+        <p *ngFor="let m of messages"> {{m}}</p>
     </div>
    
   </div>
-  <router-outlet></router-outlet>
