--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
     <br/>
     <button  class="btn btn-default" routerLink="/client">client</button>
     <button  class="btn btn-default" routerLink="/server">server</button>
-  <router-outlet></router-outlet>
+    <button  class="btn btn-default" routerLink="/form">formulaire</button>
+
+    <router-outlet></router-outlet>
 
